Fixed the loading logo.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="Home">
         <div class="Home-content">
             <h1><center><strong>WELCOME TO LUMBINI ICT CAMPUS</strong></center></h1>
-            <img class="site_img" src="/img/lumbini.jpg">
+            <img class="site_img" src="./img/lumbini.jpg">
             <p>Lumbini ICT College is one of the leading reputed and renowned instruction well known for never ending dedication and devotion to quality education and a candid temple of knowledge and wisdom. It is designed to disseminate quality education within the quality framework. It aims to help the students make the most of themselves in terms of academic and social perspectives. Lumbini ICT College caters bachelor level of program on BSC CSIT.</p>
             <p>It has well managed administration staff with highly qualified experienced teachers. It is guided by dedicated management committee in conformity with the national educational goal. The college is committed to provide quality education at reasonable cost and decentralize the teaching of IT education.<br> Determined to play a leading part in the development of modern higher education on science and technology. The members of the management board lay particular emphasis on their relationship with public bodies, other educational institutions and international ICT partners.</p>
             <p style="color:darkblue" ><h3><u>VISION</u> </h3>  </p>
